# NCRsync

./: .gitignore  CHANGELOG.md  README.md  ncrsync_textual.py  pyproject.toml
ncrsync/: __init__.py  app.py  logging_setup.py  main.py  screens.py
ncrsync/config/: config_loader.py  defaults.py
ncrsync/diagnostics/: doctor.py
ncrsync/local/: local_browser.py
ncrsync/model/: connection_profile.py  file_entry.py  transfer_job.py
ncrsync/remote/: path_utils.py  remote_browser.py  ssh_client.py
ncrsync/state/: queue_store.py  state_store.py
ncrsync/transfer/: progress_parser.py  rsync_caps.py  rsync_runner.py  transfer_manager.py
ncrsync/ui/: command_input.py  panes.py  themes.py
reqs/: 00_vision.md  01_product_requirements.md  02_textual_ui_spec.md  03_architecture.md  04_transfer_engine.md  05_remote_local_filesystems.md  06_config_logging_state.md  07_implementation_roadmap.md  08_textual_prototype_plan.md  README.md
tests/: test_app_smoke.py  test_path_safety.py  test_persistence.py  test_progress_parser.py  test_rsync_caps.py  test_transfer_manager.py  test_ui_behavior.py
